# rc-unit-economics

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
rc_unit_economics/: __init__.py  analyzer.py  cli.py  cohort.py  cost_reader.py  forecast.py  models.py  rc_client.py  report.py
tests/: test_analyzer.py  test_cohort.py  test_cost_reader.py  test_forecast.py  test_models.py  test_report.py
