[project]
name = "rc-unit-economics"
version = "0.2.0"
description = "Per-subscriber unit economics for RevenueCat agent-native SaaS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
rcue = "rc_unit_economics.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
